syntax = "proto3";

package thunder;

option go_package = "x-algorithm-go/proto/thunder";

// InNetworkPostsService provides access to in-network posts
service InNetworkPostsService {
  rpc GetInNetworkPosts(GetInNetworkPostsRequest) returns (GetInNetworkPostsResponse);
}

message GetInNetworkPostsRequest {
  uint64 user_id = 1;
  repeated uint64 following_user_ids = 2;
  uint32 max_results = 3;
  repeated uint64 exclude_tweet_ids = 4;
  string algorithm = 5;
  bool debug = 6;
  bool is_video_request = 7;
}

message GetInNetworkPostsResponse {
  repeated LightPost posts = 1;
}

message LightPost {
  int64 post_id = 1;
  int64 author_id = 2;
  int64 created_at = 3;
  optional int64 in_reply_to_post_id = 4;
  optional int64 in_reply_to_user_id = 5;
  bool is_retweet = 6;
  bool is_reply = 7;
  optional int64 source_post_id = 8;
  optional int64 source_user_id = 9;
  bool has_video = 10;
  optional int64 conversation_id = 11;
}

message TweetDeleteEvent {
  int64 post_id = 1;
  int64 deleted_at = 2;
}

message InNetworkEvent {
  oneof event_variant {
    TweetCreateEvent tweet_create_event = 1;
    TweetDeleteEvent tweet_delete_event = 2;
  }
}

message TweetCreateEvent {
  int64 post_id = 1;
  int64 author_id = 2;
  int64 created_at = 3;
  optional int64 in_reply_to_post_id = 4;
  optional int64 in_reply_to_user_id = 5;
  bool is_retweet = 6;
  bool is_reply = 7;
  optional int64 source_post_id = 8;
  optional int64 source_user_id = 9;
  bool has_video = 10;
  optional int64 conversation_id = 11;
}
